--- a/BookStoreManagement/packages.config
+++ b/BookStoreManagement/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.10" targetFramework="net48" />
